--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-three/drei": "^9.111.4",
     "@react-three/fiber": "^8.17.6",
+    "@sentry/nextjs": "^8.27.0",
     "@tabler/icons-react": "^3.13.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.30",
@@ -20,6 +21,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-lottie": "^1.2.4",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.167.1",
@@ -29,6 +31,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-lottie": "^1.2.10",
     "eslint": "^8",
     "eslint-config-next": "14.2.6",
     "gh-pages": "^6.1.1",
