--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,3 @@
 {
-  "extends": ["next/core-web-vitals"],
-  "rules": {
-    "@next/next/no-img-element": "off",
-    "jsx-a11y/alt-text": "warn" // Make sure all <img> have alt attributes
-  }
+  "extends": "next/core-web-vitals"
 }
